created variables for video player

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                 
                 <div class="video-player" id="videoPlayer">
-                    <video src="./assets/media/video.mp4" width="100%" controls autoplay id="myvideo"></video>
+                    <video src="./assets/media/video.mp4" width="100%" controls autoplay id="myVideo"></video>
                     <img class="close-btn" src="./assets/images/close.png" alt="close button">
                 </div>
                 
