connected js file

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 
                 <div class="video-player" id="videoPlayer">
                     <video src="./assets/media/video.mp4" width="100%" controls autoplay id="myVideo"></video>
-                    <img class="close-btn" src="./assets/images/close.png" alt="close button">
+                    <img class="close-btn" id="close-btn" src="./assets/images/close.png" alt="close button">
                 </div>
                 
             </div>
