--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
             <div class="column">
                 <div class="feature-img">
                     <img src="./assets/images/pic1.png" alt="sport girl posing" width="100%">
-                    <img class="play-btn" src="./assets/images/play.png" alt="play button">
+                    <img class="play-btn" src="./assets/images/play.png" alt="play button" onclick="playVideo('./assets/media/video.mp4')">
                 </div>
             </div>
             <div class="column">
                 <div class="small-img-row">
                     <div class="small-img">
                         <img src="./assets/images/pic2.png" alt="girl in dress posing">
-                        <img class="play-btn" src="./assets/images/play.png" alt="play button">                           
+                        <img class="play-btn" src="./assets/images/play.png" alt="play button" onclick="playVideo('./assets/media/production ID_3819342.mp4')">                           
                     </div>  
                     <p>Video Description</p>                  
                 </div>
                 <div class="small-img-row">
                     <div class="small-img">
                         <img src="./assets/images/pic3.png" alt="girl in dress posing">
-                        <img class="play-btn" src="./assets/images/play.png" alt="play button">                        
+                        <img class="play-btn" src="./assets/images/play.png" alt="play button" onclick="playVideo('./assets/media/production ID_4465352.mp4')">                        
                     </div>
                     <p>Video Description</p>                       
                 </div>
                 <div class="small-img-row">
                     <div class="small-img">
-                        <img src="./assets/images/pic4.png" alt="girl in dress posing">
-                        <img class="play-btn" src="./assets/images/play.png" alt="play button">                        
+                        <img src="./assets/images/pic4.png" alt="man with glasses">
+                        <img class="play-btn" src="./assets/images/play.png" alt="play button" onclick="playVideo('./assets/media/Man Texting On The Street.mp4')">                        
                     </div>
                     <p>Video Description</p>                     
                 </div>
